--- a/Horario de atendimento.html
+++ b/Horario de atendimento.html
@@ -4,7 +4,7 @@
 <head>
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible " content="IE=edge">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
      <title>Horário Atendimento</title>
      <link rel="stylesheet" href="base.css">
 </head>
@@ -13,7 +13,7 @@
         <div class="menu">
             <h1>Menu</h1>
             <ul>
-                <li><a href="pagina principal.html">Página Principal</a></li>
+                <li><a href="Pagina Principal.html">Página Principal</a></li>
                 <li><a href="sobre a clinica.html">Sobre a clínica</a></li>
                 <li><a href="Horario de atendimento.html">Horário de atendimento</a></li>
                 <li><a href="contato.html">Contato</a></li>
@@ -66,7 +66,7 @@
                 <p>Odonto MAC - Clinica Odontologica LTDA</p>
                 <p>Contato:<a href="tel:+5585999999999">(85) 99999-9999</a></p>
                 <p>End: Av.Treze de Maio, 1358, Bairro de Fátima, 60325-445, Fortaleza-Ce</p>
-                <small><a href="pagina incial.html">Voltar</a></small>
+                <small><a href="Pagina Principal.html">Voltar</a></small>
             </div>
         </div>
     </div>
