--- a/contato.html
+++ b/contato.html
@@ -4,7 +4,7 @@
 <head>
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge ">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
      <title>História da clinica</title>
      <link rel="stylesheet" href="base.css">
 </head>
@@ -13,7 +13,7 @@
         <div class="menu">
             <h1>Menu</h1>
             <ul>
-                <li><a href ="pagina incial.html">Página Principal</a></li>
+                <li><a href ="Pagina Principal.html">Página Principal</a></li>
                 <li><a href ="sobre a clinica.html">Sobre a clínica</a></li>
                 <li><a href ="Horario de atendimento.html">Horário de atendimento</a></li>
                 <li><a href ="contato.html">Contato</a></li>
@@ -58,7 +58,7 @@
 
             <div class="footer">
                 <p>Odonto MAC - Clinica Odontologica LTDA</p>
-                <small><a href="pagina incial.html">Voltar</a></small>
+                <small><a href="Pagina Principal.html">Voltar</a></small>
             </div>
         </div>
     </div>
